Currently tryingto combine rest work with w2ui work

--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,9 @@
 
 
 
+
 <div id="popup1" style="display: none; width: 650px; height: 400px; overflow: auto">
+         <!---
     <div rel="title">
         Popup One Title
     </div>
@@ -22,6 +24,26 @@
 
     <div rel="buttons">
         <button class="btn" onclick="$('#popup2').w2popup()">Switch to Popup 2</button>
+        
+    </div>
+    -->
+
+    <div rel="body">
+    <div style="padding: 10; font-size: 11px; line-height: 150%;">
+			<div style="float:left; background-color:white; width:150px; height:80px; border: 1px solid silver; margin:5px;">
+            </div>
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+            This is body of popup #1. You can put any text or HTML inside the body (as well as title and buttons).
+        </div>
     </div>
 </div>
 
